# scope-guard

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  SECURITY.md  build.py  conanfile.py  conanfile.txt
.github/workflows/: ci.yml  codeql.yml
cmake/: Compiler.cmake  Install.cmake  scope.in
include/: scope.h  scope_exit.h  scope_fail.h  scope_guard.h  scope_guard_base.h  scope_success.h  unique_resource.h
include/detail/: scope_guard_base.h  wrapper.h
script/: ci_build.sh  ci_install.sh  conan_build.sh  settings.yml
test/: CMakeLists.txt  CallMocks.h  Mocks.h  ScopeExitTest.cpp  ScopeFailTest.cpp  ScopeGuardTest.cpp  ScopeSuccessTest.cpp  TestMain.cpp  UniqueResourceTest.cpp
test/catch/: catch.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
